fix mobile styles for badge wrapping

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -357,6 +357,13 @@
         top: -160px;
         left: -8px;
     }
+    
+    .location__badges {
+        max-width: 300px;
+        display: flex;
+        flex-wrap: wrap;
+        gap: 10px;
+    }
 
     .location__btn-box {
         display: flex;
